跳转到书签页

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>红烧鱼</title>
+    <meta http-equiv="refresh" content="0; url=https://pintree-sigma-eight.vercel.app/">
+    <title>页面跳转中</title>
 <style>
 body {
   font-family: system-ui;
@@ -17,9 +18,7 @@ h1 {
 </style>
 </head>
 <body>
-<h1>👋 Hello World!</h1>
+<h1>正在跳转到网站，请稍候...</h1>
+<p>如果页面没有自动跳转，请<a href="https://pintree-sigma-eight.vercel.app/" style="color: white; text-decoration: underline;">点击这里</a></p>
 </body>
 </html>
-<script>
-document.getElementsByTagName("h1")[0].style.fontSize = "6vw";
-</script>
